--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux
-LABEL AUTHOR="PRAVEEN"/
-      COURSE="DOCKER"/
+LABEL AUTHOR="PRAVEEN"\
+      COURSE="DOCKER"\
       DURATION="25HRS"
