--- a/COPY/Dockerfile
+++ b/COPY/Dockerfile
@@ -3,3 +3,4 @@ RUN yum install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
 COPY sample2.html /usr/share/nginx/html/
 CMD ["nginx","-g","daemon off;"]
+EXPOSE 8080
