--- a/COPY/Dockerfile
+++ b/COPY/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux
 RUN yum install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
-COPY sample2.html /usr/share/nginx/html/
+COPY mywebsite /usr/share/nginx/html/
 CMD ["nginx","-g","daemon off;"]
-EXPOSE 8080
+EXPOSE 8081
