--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,2 +1,3 @@
 FROM almalinux
 ADD https://raw.githubusercontent.com/FedeCarollo/jukebox-cli/refs/heads/main/Cargo.toml /tmp
+ADD apache-tomcat-9.0.108-src.tar /tmp/
