--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,3 +1,5 @@
 FROM almalinux
 #CMD ["ping","-c5","google.com"]
-ENTRYPOINT ["ping","-c5","google.com"]
+#ENTRYPOINT ["ping","-c5","google.com"]
+CMD ["google.com"]
+ENTRYPOINT ["ping","-c5"]
